FISH-10876 Add test - although tests seem to be more broken here...